# scopi

./: .cppcheck  .gitignore  AUTHORS.txt  CMakeCache.txt  CMakeLists.txt  LICENSE  convert_formula.py  doc_formula.tex  empty_hourglass_subdivide1.stl  readme.md  scopi.pc.in  scopiConfig.cmake.in  test_contacts_superellipsoid2D.py  test_contacts_superellipsoid2D_disque2D.py  test_contacts_superellipsoid2D_droite2D.py  test_contacts_superellipsoid3D.py  test_contacts_superellipsoid3D_plan3D.py  test_contacts_superellipsoid3D_sphere3D.py  test_fm.py  test_movie.py  test_scopi.py  test_visu.py
.github/: PULL_REQUEST_TEMPLATE.md
cmake/: FindMOSEK.cmake  generator.cmake  installation.cmake  version.cmake
demos/: CMakeLists.txt  box_spheres_3d.cpp  convergence_scheme.cpp  friction.cpp  mosek_solver.hpp  mosek_solver_sparse.hpp  mosek_solver_sparse_optim.hpp  pile_of_sand_spheres.cpp  pile_of_sand_superellipsoids.cpp  segment.cpp  sphere_plan.cpp  sphere_plane.cpp  test_container.cpp  test_dispatch.cpp  test_distance.cpp  test_distance_3d.cpp  test_mosek.cpp  test_mosek_sphere.cpp  test_nanoflann.cpp  test_quentin.cpp  test_scopi.cpp  test_soa.cpp  test_soa_xtensor.cpp  test_uzawa.cpp  three_worms_periodic.cpp  two_ellipsoids.cpp  two_ellipsoids_asymmetrical.cpp  two_ellipsoids_asymmetrical_2d.cpp  two_ellipsoids_asymmetrical_3d.cpp  two_ellipsoids_spheres.cpp  two_ellipsoids_spheres_2d.cpp  two_ellipsoids_spheres_3d.cpp  two_globules.cpp  two_spheres.cpp  two_spheres_periodic.cpp  two_spheres_viscosity.cpp  two_worms.cpp  two_worms_periodic.cpp  viscosity.cpp  worm_spline.cpp  (+1 more)
demos/critical/: 2d_case.cpp  2d_case_no_overlap.cpp  2d_case_no_velocity.cpp  2d_case_spheres.cpp  3d_case.cpp  CMakeLists.txt  globules.cpp  worms.cpp
demos/proceeding/: CMakeLists.txt
demos/proceeding/disk_on_inclined_plane/: CMakeLists.txt  distance_and_velocity_with_friction_mu01_convex.cpp  distance_and_velocity_with_friction_mu01_fixedPoint.cpp  distance_and_velocity_with_friction_mu1_convex.cpp  distance_and_velocity_with_friction_mu1_fixedPoint.cpp  distance_and_velocity_without_friction.cpp  error_with_friction_mu01_convex.cpp  error_with_friction_mu01_fixedPoint.cpp  error_with_friction_mu1_convex.cpp  error_with_friction_mu1_fixedPoint.cpp  error_without_friction.cpp  oneStep_apgd_largeTol.cpp  oneStep_apgd_smallTol.cpp  oneStep_apgdar_largeTol.cpp  oneStep_apgdar_smallTol.cpp  oneStep_apgdas_largeTol.cpp  oneStep_apgdas_smallTol.cpp  oneStep_apgdasr_largeTol.cpp  oneStep_apgdasr_smallTol.cpp  oneStep_pgd_largeTol.cpp  oneStep_pgd_smallTol.cpp
demos/proceeding/multiparticles_tests/: CMakeLists.txt  pile_of_sand_ellipses.cpp  pile_of_sand_friction_figure_mu01_convex.cpp  pile_of_sand_friction_figure_mu01_fixed_point.cpp  pile_of_sand_friction_figure_mu1_convex.cpp  pile_of_sand_friction_figure_mu1_convex_2d.cpp  pile_of_sand_friction_figure_mu1_fixed_point.cpp  pile_of_sand_friction_large_config_mu01_convex.cpp  pile_of_sand_friction_large_config_mu01_fixed_point.cpp  pile_of_sand_friction_large_config_mu1_convex.cpp  pile_of_sand_friction_large_config_mu1_fixed_point.cpp  pile_of_sand_friction_small_config_mu01_convex.cpp  pile_of_sand_friction_small_config_mu01_fixed_point.cpp  pile_of_sand_friction_small_config_mu1_convex.cpp  pile_of_sand_friction_small_config_mu1_fixed_point.cpp  pile_of_sand_large_config_mu01_convex.cpp  pile_of_sand_large_config_mu01_fixed_point.cpp  pile_of_sand_large_config_mu1_convex.cpp  pile_of_sand_large_config_mu1_fixed_point.cpp  pile_of_sand_small_config_mu01_convex.cpp  pile_of_sand_small_config_mu01_fixed_point.cpp  pile_of_sand_small_config_mu1_convex.cpp  pile_of_sand_small_config_mu1_fixed_point.cpp  spheres_in_box_large_config_apgd.cpp  spheres_in_box_large_config_apgdar.cpp  spheres_in_box_large_config_apgdas.cpp  spheres_in_box_large_config_apgdasr.cpp  spheres_in_box_large_config_pgd.cpp  spheres_in_box_small_config_apgd.cpp  spheres_in_box_small_config_apgdar.cpp  spheres_in_box_small_config_apgdas.cpp  spheres_in_box_small_config_apgdasr.cpp  spheres_in_box_small_config_pgd.cpp
test/: CMakeLists.txt  analytical_solution.cpp  analytical_solution.hpp  doctest.cfg  main.cpp  test_closest_points.cpp  test_common.hpp  test_contacts_brute_force.cpp  test_contacts_kdtree.cpp  test_container.cpp  test_friction.cpp  test_globule.cpp  test_gradient.cpp  test_matrices.cpp  test_obstacles.cpp  test_quaternions.cpp  test_sphere.cpp  test_superellipsoid.cpp  test_test.cpp  test_test2.cpp  test_viscosity.cpp  test_worm.cpp  two_ellipsoids_spheres_symmetrical_uzawaMatrixFreeOmp.json  utils.cpp  utils.hpp
test/references/: 2d_case_spheres.json  2d_case_spheres_friction.json  2d_case_spheres_vap.json  2d_case_superellipsoid.json  3spheres_friction_fp.json  3spheres_nofriction.json  3spheres_viscous.json  3spheres_viscous_friction.json  obstacles_sphere_sphere_moving.json  sphere_plan_friction_mu01.json  sphere_plan_viscosity.json  sphere_plan_viscosity_friction.json  sphere_plan_viscosity_friction_vertical.json  sphere_plane_friction_mu01.json  sphere_plane_viscosity.json  sphere_plane_viscosity_friction.json  sphere_plane_viscosity_friction_vertical.json  two_ellipsoids_asymmetrical.json  two_ellipsoids_asymmetrical_mosek.json  two_ellipsoids_asymmetrical_scs.json  two_ellipsoids_asymmetrical_uzawaMatrixFreeOmp.json  two_ellipsoids_spheres_asymmetrical.json  two_ellipsoids_spheres_asymmetrical_scs.json  two_ellipsoids_spheres_asymmetrical_uzawaMkl.json  two_ellipsoids_spheres_symmetrical.json  two_ellipsoids_spheres_symmetrical_mosek.json  two_ellipsoids_spheres_symmetrical_scs.json  two_ellipsoids_spheres_symmetrical_uzawaMkl.json  two_ellipsoids_symmetrical.json  two_ellipsoids_symmetrical_mosek.json  two_ellipsoids_symmetrical_scs.json  two_ellipsoids_symmetrical_uzawaMkl.json  two_globules.json  two_spheres_asymmetrical.json  two_spheres_asymmetrical_friction.json  two_spheres_asymmetrical_mosek.json  two_spheres_asymmetrical_scs.json  two_spheres_asymmetrical_uzawaMatrixFreeTbb.json  two_spheres_asymmetrical_uzawaMkl.json  two_spheres_symmetrical.json  (+4 more)
(+252 files in other folders)
